--- a/myplabooknow.yml
+++ b/myplabooknow.yml
@@ -4,4 +4,4 @@
   become: true
   tasks: 
   - name: To create users.
-    user: name=jenkin_test12 state=present password="piBk1xODKdWxM"
+    user: name=jenkin_test12 state=present password="3WIZKD0oUipo."
